Clarify /rules vote manipulation rule.

--- a/r2/r2/templates/rulespage.html
+++ b/r2/r2/templates/rulespage.html
@@ -73,12 +73,12 @@ function toggle_expando(elem){
         ${expando_end()}
       </li>
       <li id="votecheating">
-        <p>Don't engage in vote&#32;<a href="http://www.reddit.com/wiki/faq#wiki_what_constitutes_cheating.3F">cheating or manipulation</a>.</p>
-        ${expando_start("What does vote cheating look like?")}
-          ${bad_example('Buying upvotes from other people.')}
+        <p>Don't ask for votes or engage in&#32;<a href="http://www.reddit.com/wiki/faq#wiki_what_constitutes_cheating.3F">vote manipulation</a>.</p>
+        ${expando_start("What does vote manipulation look like?")}
+          ${bad_example('Buying votes or using services to vote.')}
           ${good_example('Sharing reddit links with your friends.')}
-          ${bad_example('Sharing only <b>&nbsp;your&nbsp;</b> reddit links with your friends &mdash; then asking them to register and upvote them.')}
-          ${bad_example('Creating submissions that start with "For every upvote I will ______," regardless of cause.')}
+          ${bad_example('Sharing links with your friends or coworkers and asking them to vote.')}
+          ${bad_example('Creating submissions such as "For every upvote I will ..." or "... please upvote this!", regardless of the cause.')}
         ${expando_end()}
       </li>
       <li id="personalinfo">
