--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -426,6 +426,9 @@ ul.flat-vert {text-align: left;}
 .morelink a {
     display: block;
     width: 100%;
+    height: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
     color:#369;
 }
 
