Do better job of disabling/enabling stripe button.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5435,7 +5435,7 @@ body:not(.gold) .allminus-link {
     text-shadow: 0px 1px 0px hsla(0,0%,100%,.7);
 }
 
-.gold-button.disabled {
+.gold-button.disabled, .gold-button:disabled  {
     color: #999;
     background-color: #ccc;
     border-color: #aaa;
