Add /r/myrandom (gold only for now)
Takes you to a random subreddit you subscribe to

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3409,6 +3409,7 @@ ul#image-preview-list .description pre {
 
 .sr-bar .separator {color: gray; }
 .sr-bar a {color: black;} 
+.sr-bar a.gold { color: #9a7d2e; font-weight: bold; }
 
 #sr-more-link {
     color: black;
