Use consistent scaling on the timings graph
This lets one, at a glance, get a feel for how long a page took
to load. Timing data is scaled such that browser-width is 8 seconds
(unless the page took longer than 8 seconds). Clicking on the timings
will zoom the graph in for better investigation of what parts took
what amounts of time.

--- a/r2/r2/public/static/css/adminbar.less
+++ b/r2/r2/public/static/css/adminbar.less
@@ -225,6 +225,15 @@
             right: 0;
             top: 0;
             bottom: 0;
+            cursor: -webkit-zoom-in;
+            cursor: -moz-zoom-in;
+            cursor: zoom-in;
+
+            &.zoomed {
+                cursor: -webkit-zoom-out;
+                cursor: -moz-zoom-out;
+                cursor: zoom-out;
+            }
 
         }
 
