spotlight: Replace stubs with internal fetch state.
Stubs are no longer necessary since replace_things is not being used by
fetch_promos any more.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -974,6 +974,7 @@ a.author { margin-right: 0.5em; }
     right: 0px;
     top: 0px;
     vertical-align: top;
+    z-index: 1;
 }
 
 .organic-listing .nextprev .arrow {
@@ -1006,6 +1007,7 @@ a.author { margin-right: 0.5em; }
     position: absolute;
     right: -1px;
     bottom: 0px;
+    z-index: 1;
 }
 
 .link.promotedlink {
