spotlight: Add fetch_promo throbber.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -977,10 +977,18 @@ a.author { margin-right: 0.5em; }
     z-index: 1;
 }
 
-.organic-listing .nextprev .arrow {
+.organic-listing .nextprev .arrow, .organic-listing .nextprev .throbber {
     width: 21px;
     height: 21px;
     margin: 5px 5px 2px 0px;
+}
+
+.organic-listing .nextprev .throbber {
+    vertical-align: top;
+    background-position: center center;
+}
+
+.organic-listing .nextprev .arrow {
     border: solid 1px #B3B3B3;
     display: inline-block;
     position: relative;
