--- a/r2/r2/templates/spotlightlisting.html
+++ b/r2/r2/templates/spotlightlisting.html
@@ -42,6 +42,7 @@
   %endif
 
   <div class="nextprev">
+    <div class="throbber"></div>
     <button class="arrow prev">${_("prev")}</button>
     <button class="arrow next">${_("next")}</button>
   </div>
