--- a/r2/r2/templates/spotlightlisting.html
+++ b/r2/r2/templates/spotlightlisting.html
@@ -28,7 +28,7 @@
    from r2.lib.wrapped import Templated
 %>
 
-<div id="siteTable_organic" class="organic-listing">
+<div id="siteTable_organic" class="organic-listing loading">
   %if thing.things:
     %for link in thing.things:
       ${unsafe(link.render(display=False))}
