wiki: Replace inner_content nonsense.

--- a/r2/r2/templates/wikibasepage.html
+++ b/r2/r2/templates/wikibasepage.html
@@ -72,7 +72,7 @@
                 </h2>
             </div>
         %endif
-        ${thing.inner_content}
+        ${thing.content()}
     </div>
 
     <!--reddit wikis are powered by Cray-1™ supercomputers-->
