Award-claiming via one-time links.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4297,6 +4297,11 @@ table.lined-table {
     margin-top: 4px;
 }
 
+.confirm-award-claim .md {
+    max-width: none;
+    font-size: 18px;
+}
+
 .trophy-table {
     width: 100%;
 }
