Hover bubble UI overhaul.
* Backbone
* Show event
* Display groups (for fast show/hide switching)
* Right alignment mode
* Slide animations

--- a/r2/r2/templates/spotlightlisting.html
+++ b/r2/r2/templates/spotlightlisting.html
@@ -49,7 +49,7 @@
 
   <div class="help help-hoverable">
     ${_("what's this?")}
-    <div id="spotlight-help" class="help-bubble">
+    <div id="spotlight-help" class="hover-bubble help-bubble anchor-top">
       <div class="help-section help-promoted">
         <p>
           ${text_with_links(
