--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -892,41 +892,67 @@ a.author { margin-right: 0.5em; }
     cursor: help;
 }
 
-.help-bubble {
+.hover-bubble {
     display: none;
     position: absolute;
-    width: 35em;
     background: white;
     color: #333;
     border: 1px solid gray;
     padding: 3px;
     box-shadow: 0 2px 10px rgba(0,0,0,.25);
+    z-index: 100;
+
+    &:before, &:after {
+        position: absolute;
+        display: block;
+        content: '';
+    }
+
+    &.anchor-top {
+        &:before, &:after {
+            right: 8px;
+            border: 9px solid transparent;
+        }
+
+        &:before {
+            top: -19px;
+            border-bottom-color: gray;
+        }
+
+        &:after {
+            top: -18px;
+            border-bottom-color: white;
+        }
+    }
+
+    &.anchor-right {
+        &:before, &:after {
+            top: 8px;
+            border: 9px solid transparent;
+        }
+
+        &:before {
+            right: -19px;
+            border-left-color: gray;
+        }
+
+        &:after {
+            right: -18px;
+            border-left-color: white;
+        }
+    }
 }
 
-.help-bubble p, .help-bubble form {
-    margin: .5em;
-}
+.help-bubble {
+    width: 35em;
 
-.help-bubble:before, .help-bubble:after {
-    position: absolute;
-    right: 8px;
-    display: block;
-    content: '';
-    border: 9px solid transparent;
-}
+    p, form {
+        margin: .5em;
+    }
 
-.help-bubble:before {
-    top: -19px;
-    border-bottom-color: gray;
-}
-
-.help-bubble:after {
-    top: -18px;
-    border-bottom-color: white;
-}
-
-.help-bubble a:hover {
-    text-decoration: underline
+    a:hover {
+        text-decoration: underline
+    }
 }
 
 .infotext { 
