--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1,3 +1,17 @@
+.box-sizing(@sizing) {
+    box-sizing: @sizing;
+    -webkit-box-sizing: @sizing;
+    -moz-box-sizing: @sizing;
+}
+
+.no-select {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 html {
     height: 100%; /* Needed for toolbar's comments panel's pinstripe */
 }
@@ -1017,6 +1031,77 @@ a.author { margin-right: 0.5em; }
 
     a:hover {
         text-decoration: underline
+    }
+}
+
+.hover-bubble.multi-selector {
+    @arrow-offset: 40px;
+    margin-top: -7px - @arrow-offset;
+    min-width: 130px;
+    min-height: @arrow-offset * 2;
+    padding: 8px 0;
+    .no-select;
+
+    &:before, &:after {
+        top: 8px + @arrow-offset;
+    }
+
+    strong, a.sr {
+        display: block;
+        margin: 3px 0;
+        text-align: center;
+    }
+
+    strong {
+        font-size: 1.05em;
+        font-weight: bold;
+        color: #333;
+    }
+
+    .throbber {
+        position: absolute;
+        top: 10px;
+        right: 8px;
+    }
+
+    .multi-list {
+        margin-top: 5px;
+    }
+
+    label {
+        font-size: 1.25em;
+        display: block;
+        padding: 5px 12px;
+
+        &:hover {
+            background: #eee;
+        }
+
+        input[type="checkbox"] {
+            margin-top: 0;
+            vertical-align: middle;
+        }
+
+        a {
+            float: right;
+            margin-left: 7px;
+            width: 12px;
+            height: 12px;
+            line-height: 12px;
+            background: white;
+            border: 1px solid lighten(#369, 20%);
+            border-radius: 2px;
+            text-align: center;
+            opacity: .65;
+
+            &:hover {
+                opacity: 1;
+            }
+        }
+    }
+
+    input {
+        margin-right: 5px;
     }
 }
 
@@ -4998,6 +5083,135 @@ table.calendar {
     margin-left: 5px;
 }
 
+.confirm-button .confirmation {
+    color: red;
+    white-space: nowrap;
+
+    .prompt {
+        margin-right: .5em;
+    }
+}
+
+.gray-buttons {
+    button {
+        padding: 0;
+        margin: 0;
+        border: none;
+        background: none;
+        color: #888;
+        font-weight: bold;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
+
+.multi-details {
+    h1 {
+        margin-bottom: 0;
+    }
+
+    h1 a, .throbber {
+        vertical-align: middle;
+    }
+    .throbber {
+        margin-left: 5px;
+    }
+
+    h2 {
+        margin-top: 0;
+        margin-bottom: 3px;
+    }
+
+    .settings {
+        margin-bottom: 5px;
+
+        input[type="radio"] {
+            margin: 0;
+            margin-right: 3px;
+            vertical-align: middle;
+        }
+
+        label {
+            margin-right: 10px;
+        }
+
+        .delete {
+            margin-left: 5px;
+        }
+    }
+
+    h3 {
+        font-weight: normal;
+        color: #777;
+        margin-bottom: 3px;
+    }
+
+    ul, form.add-sr {
+        margin-left: 12px;
+    }
+
+    button.remove-sr, button.add {
+        .box-sizing(content-box);
+        text-indent: -9999px;
+        margin-left: 3px;
+        background: none no-repeat;
+        border: 3px solid transparent;
+        padding: 0;
+        opacity: .3;
+
+        &:hover {
+            opacity: 1;
+        }
+
+        &:active {
+            position: relative;
+            top: 1px;
+        }
+
+        &.remove-sr {
+            width: 9px;
+            height: 9px;
+            background-image: url(../close-small.png);  /* SPRITE */
+        }
+
+        &.add {
+            width: 15px;
+            height: 15px;
+            background-image: url(../add.png);  /* SPRITE */
+        }
+    }
+
+    form.add-sr {
+        .sr-name, button.add {
+            vertical-align: middle;
+        }
+
+        .sr-name {
+            border: 1px solid #ccc;
+            padding: 3px;
+        }
+
+        button.add {
+            border: 5px solid transparent;
+        }
+    }
+
+    li {
+        font-size: 1.15em;
+        line-height: 1.5em;
+
+        a, button {
+            vertical-align: middle;
+        }
+    }
+
+    .bottom {
+        margin-top: 1em;
+    }
+}
+
 .sidecontentbox {
     font-size: normal;
 }
@@ -6711,4 +6925,213 @@ body.gold .buttons li.comment-save-button { display: inline; }
 .permission-selector .status, .permission-selector .error {
     text-align: left;
     white-space: normal;
+}
+
+body.with-listing-chooser {
+    position: relative;
+
+    & #header .tabmenu {
+        position: absolute;
+        margin-left: -2px;
+        left: 130px;
+        bottom: 0;
+
+        li:first-child.selected {
+            margin-left: 2px;
+        }
+    }
+
+    & #header .pagename {
+        position: absolute;
+        left: 130px;
+        bottom: 20px;
+    }
+
+    & > .content, & .footer-parent {
+        margin-left: 140px
+    }
+}
+
+.listing-chooser {
+    @width: 130px;
+    @shadow-width: 4px;
+    position: absolute;
+    top: 65px;
+    left: 0;
+    bottom: 0;
+    width: @width;
+    border-right: 1px solid #ccc;
+    background: #f7f7f7;
+
+    &:after {
+        content: '';
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        left: @width - @shadow-width;
+        box-shadow: -@shadow-width 0 2*@shadow-width -@shadow-width rgba(0, 0, 0, .3) inset;
+        z-index: 90;
+    }
+
+    h3 {
+        color: #777;
+        text-align: right;
+        padding: 4px;
+    }
+
+    ul.global, ul.other {
+        padding: 8px 0;
+        li {
+            margin-left: 4px;
+
+            a {
+                font-size: 1.3em;
+                padding: 1em 5px;
+                padding-left: 12px;
+            }
+        }
+    }
+
+    ul.other {
+        margin-top: 10px;
+    }
+
+    ul.multis {
+        li {
+            margin-left: 12px;
+
+            a {
+                font-size: 1.2em;
+                padding: .8em 5px;
+                padding-left: 10px;
+            }
+        }
+    }
+
+    li {
+        text-align: left;
+        margin-bottom: 3px;
+        background: #fff;
+        border: 1px solid #ccc;
+        border-bottom-width: 2px;
+        border-right: none;
+        border-top-left-radius: 5px;
+        border-bottom-left-radius: 5px;
+
+        a {
+            display: block;
+            position: relative;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            margin-right: 5px;
+
+            .description {
+                color: gray;
+                font-size: .8em;
+                font-weight: normal;
+            }
+        }
+
+        &:last-child a {
+            border-bottom: none;
+        }
+
+        &.selected {
+            position: relative;
+            background: lighten(#cee3f8, 6%);
+            border-color: lighten(#369, 40%);
+            z-index: 100;
+
+            a {
+                font-weight: bold;
+            }
+
+            &:after,
+            &:before {
+                position: absolute;
+                top: 50%;
+                margin-top: -15px;
+                display: block;
+                content: '';
+                border: 15px solid transparent;
+                border-style: solid solid outset; // mitigates firefox drawing a thicker arrow
+                z-index: 100;
+            }
+
+            &:before {
+                right: 0px;
+                border-right-color: #ccc;
+            }
+
+            &:after {
+                right: -2px;
+                border-right-color: white;
+            }
+        }
+    }
+
+
+    .create {
+        padding: 5px;
+
+        input[type="text"] {
+            width: 95px;
+            background: white;
+            border: 1px solid #ccc;
+            padding: 2px 5px;
+            margin-bottom: 3px;
+            display: none;
+        }
+
+        .error {
+            margin: 4px 0;
+        }
+
+        button {
+            display: inline;
+            text-align: center;
+            padding: 1px 4px;
+            margin: 0;
+
+            background: none;
+            border: 1px solid #777;
+            border-radius: 3px;
+            opacity: .5;
+
+            &:hover {
+                opacity: .90;
+            }
+
+            &:active {
+                background: #e9e9e9;
+            }
+        }
+
+        button, .throbber {
+            vertical-align: middle;
+        }
+
+        .throbber {
+            float: right;
+        }
+
+        &.expanded {
+            input[type="text"] {
+                display: block;
+            }
+
+            button {
+                opacity: .75;
+                background: #fcfcfc;
+                box-shadow: 0 1px 1px rgba(0, 0, 0, .25);
+
+                &:active {
+                    position: relative;
+                    top: 1px;
+                    box-shadow: none;
+                }
+            }
+        }
+    }
 }
