--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -232,6 +232,8 @@
     <td class="prefright">
       ${checkbox(_("allow subreddits to show me custom styles"), "show_stylesheets")}
       <br/>
+      ${checkbox(_("show left sidebar"), "show_left_bar")}
+      <br/>
       ${checkbox(_("show user flair"), "show_flair")}
       <br/>
       ${checkbox(_("show link flair"), "show_link_flair")}
