Add title attribute to linkflair span
The default stylesheet sets a low max-width on the linkflair span,
so long flair is often cut off on the front page. This will allow
mousing over the flair to see the full text.

--- a/r2/r2/templates/link.html
+++ b/r2/r2/templates/link.html
@@ -78,7 +78,7 @@
 
 <%def name="flair()">
   %if c.user.pref_show_link_flair and thing.flair_text:
-    <span class="linkflairlabel">${thing.flair_text}</span>
+    <span class="linkflairlabel" title="${thing.flair_text}">${thing.flair_text}</span>
   %endif
 </%def>
 
