'reddit this ad' to 'discuss this ad on reddit'
Also delete a static ad file that's no longer used

--- a/r2/r2/templates/dart_ad.html
+++ b/r2/r2/templates/dart_ad.html
@@ -86,7 +86,7 @@ document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj
     </div>
     <div id="adlink">
       <a target="_top" href="#" onmousedown="rwt(this)">
-        ${_("reddit this ad")}
+        ${_("discuss this ad on reddit")}
       </a>
     </div>
     <script language="JavaScript" type="text/javascript">
