--- a/r2/r2/templates/housead.html
+++ b/r2/r2/templates/housead.html
@@ -51,7 +51,7 @@
     </div>
     <div id="adlink">
       <a target="_top" href="${thing.submit_link}">
-        ${_("reddit this ad")}
+        ${_("discuss this ad on reddit")}
       </a>
     </div>
   </body>
