Change "reddit" to "subreddit" where appropriate
This also adds new routes for /subreddits/ replacing /reddits/, though
the old routes are kept as well for backwards-compatibility

--- a/r2/r2/templates/createsubreddit.html
+++ b/r2/r2/templates/createsubreddit.html
@@ -214,7 +214,7 @@
                  %endif
           >
           <label for="allow_top">
-            ${_("allow this reddit to be shown in the default set")}
+            ${_("allow this subreddit to be shown in the default set")}
           </label>
         </li>
         <li>
