--- a/r2/r2/templates/feedbackblurb.html
+++ b/r2/r2/templates/feedbackblurb.html
@@ -44,11 +44,11 @@
     <dt>Got a bug report?</dt>
     <dd><a href="/r/bugs/">Check /r/bugs for other people with the same problem, or submit your own bug report.</a></dd>
     <dt>Are you a new moderator?  Having trouble staying out of the fray? Need advice?</dt>
-    <dd><a href="/r/modhelp">There's a reddit for that</a>.</dd>
+    <dd><a href="/r/modhelp">There's a subreddit for that</a>.</dd>
     <dt>Want to advertise but don't know how?</dt>
     <dd><a href="/ad_inq">The instructions are here</a>.</dd>
     <dt>General questions?  Need help?</dt>
-    <dd><a href="/r/help">There's a reddit for that, too</a>.</dd>
+    <dd><a href="/r/help">There's a subreddit for that, too</a>.</dd>
     <dt>Frustrated? Need a break?</dt>
     <% r = random.randint(0,2) %>
     %if r == 0:
