--- a/r2/r2/templates/flairprefs.html
+++ b/r2/r2/templates/flairprefs.html
@@ -27,7 +27,7 @@
           checked="checked"
         %endif
         >
-    ${_("Show my flair on this reddit. It looks like:")}
+    ${_("Show my flair on this subreddit. It looks like:")}
   </form>
   <div class="tagline">${thing.wrapped_user}</div>
 %endif
