--- a/r2/r2/templates/over18.html
+++ b/r2/r2/templates/over18.html
@@ -24,7 +24,7 @@
 
 <div class="content over18" style="text-align: center">
   <p class="error">
-    ${_("you must be at least eighteen to view this reddit")}
+    ${_("you must be at least eighteen to view this subreddit")}
   </p>
   <img src="${static('over18.png')}" alt="" height="254" width="180" />
   
