--- a/r2/r2/templates/pagenamenav.html
+++ b/r2/r2/templates/pagenamenav.html
@@ -31,9 +31,9 @@
   </span>
 </%def>
 
-<%def name="reddits()">
+<%def name="subreddits()">
   <span class="hover pagename redditname">
-    ${plain_link(_("reddits"), "/reddits/", _sr_path=False)}
+    ${plain_link(_("subreddits"), "/subreddits/", _sr_path=False)}
   </span>
 </%def>
 
