--- a/r2/r2/templates/redditads.html
+++ b/r2/r2/templates/redditads.html
@@ -115,7 +115,7 @@
   %if thing.other_ads:
     <tr>
       <td colspan="2" class="centered">
-        Ads not (yet) used on this reddit:
+        Ads not (yet) used on this subreddit:
       </td>
     </tr>
   %endif
