--- a/r2/r2/templates/searchform.html
+++ b/r2/r2/templates/searchform.html
@@ -30,7 +30,7 @@
   <p>use the following search parameters to narrow your results:</p>
 
   <dl>
-      <dt>reddit:<i>subreddit</i></dt>
+      <dt>subreddit:<i>subreddit</i></dt>
       <dd>${_('find submissions in "subreddit"')}</dd>
       <dt>author:<i>username</i></dt>
       <dd>${_('find submissions by "username"')}</dd>
@@ -46,11 +46,11 @@
       <dd>${_('include (or exclude) results marked as NSFW')}</dd>
   </dl>
 
-  <p>e.g.&#32;<code>reddit:aww site:imgur.com dog</code></p>
+  <p>e.g.&#32;<code>subreddit:aww site:imgur.com dog</code></p>
   <p><a href="http://www.reddit.com/wiki/search">${_('see the search faq for details.')}</a></p>
   </div>
 
-  <p><a href="http://www.reddit.com/wiki/search" id="search_showmore">${_('advanced search: by author, community...')}</a></p>
+  <p><a href="http://www.reddit.com/wiki/search" id="search_showmore">${_('advanced search: by author, subreddit...')}</a></p>
 </%def>
 
 <form action="${add_sr('/search')}" id="search" role="search">
