--- a/r2/r2/templates/spotlightlisting.html
+++ b/r2/r2/templates/spotlightlisting.html
@@ -82,7 +82,7 @@
         <p>
           ${text_with_links(
             _("You can access this tool at any time on the %(reddits)s page."),
-              reddits=dict(link_text="/reddits/", path="/reddits/")
+              reddits=dict(link_text="/subreddits/", path="/subreddits/")
           )}
         </p>
       </div>
