Add extra_stylesheets knob to Reddit.
This provides an easy way for plugins to add extra separate stylesheets
to the site.

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -97,6 +97,10 @@
   <![endif]-->
 
   ${adminbar_stylesheet()}
+
+  %for extra_stylesheet in getattr(thing, 'extra_stylesheets', ()):
+    ${less_stylesheet(extra_stylesheet)}
+  %endfor
 </%def>
 
 <%def name="javascript()">
