Automatically select image type on upload

--- a/r2/r2/templates/subredditstylesheet.html
+++ b/r2/r2/templates/subredditstylesheet.html
@@ -220,6 +220,14 @@
                         .replace(/[ _]/g, "-");
                     $('#img-name').val(f);
                 }
+
+                var ext = file_input.value
+                    .split('.').pop().toLowerCase()
+                    .replace("jpeg", "jpg");
+                if (ext == 'png' || ext == 'jpg') {
+                    $('input:radio[name=img_type]').attr('checked', false);
+                    $('input:radio[name=img_type][value="' + ext + '"]').attr('checked', true);
+                }
             }
         }
         function check_name(form) {
