Remove limit on /r/all- and add info to gold page

--- a/r2/r2/templates/goldinfopage.html
+++ b/r2/r2/templates/goldinfopage.html
@@ -58,7 +58,7 @@
     ${feature_item(static('gold/sample-filterall.png'),
       _(
         "# Filter specific subreddits from /r/all.\n"
-        "Are there subreddits you don't want to see? Customize /r/all by removing them."
+        "Are there subreddits you don't want to see? Customize /r/all by removing them with a url like /r/all-operative-badger (up to ~300 removals - limited by maximum url length)."
       ), 'new')}
     ${feature_item(static('gold/sample-morecomments.png'),
       _(
