--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4214,6 +4214,28 @@ div.timeseries span.title {
     white-space: nowrap;
 }
 
+.traffic-table.promocampaign-table {
+    thead th {
+        text-align: right;
+        padding: 0 5px;
+    }
+
+    tr.total {
+        border-top: 1px solid black;
+    }
+
+    tr.active {
+        background-color: pink;
+        font-weight: bold;
+        border: 2px dotted red;
+    }
+}
+
+.traffic_viewer-table {
+    margin-bottom: 2em;
+    margin-left: 1em;
+}
+
 .promo-traffic .content .tabmenu li {
     font-size: 1.3em;
 }
