--- a/r2/r2/templates/promotedlinktraffic.html
+++ b/r2/r2/templates/promotedlinktraffic.html
@@ -20,8 +20,7 @@
 ## reddit Inc. All Rights Reserved.
 ###############################################################################
 
-<%inherit file="reddittraffic.html"/>
-<%namespace file="reddittraffic.html" import="load_timeseries_js"/>
+<%namespace file="reddittraffic.html" import="load_timeseries_js, last_modified_message"/>
 <%namespace file="utils.html" import="plain_link" />
 
 <%!
@@ -30,40 +29,17 @@
     from r2.lib.template_helpers import format_number, js_timestamp
 %>
 
-<%def name="preamble()">
-  ${unsafe(safemarkdown(strings.traffic_promoted_link_explanation))}
-
-  ${thing.viewer_list}
-
-  <h1>
-  ${_("promotion traffic")}
-    <a href="/traffic/${thing.thing._id36}.csv">
-    ${_("(download as .csv)")}
-    </a>
-  </h1>
-
-  ${load_timeseries_js()}
-</%def>
-
-<%def name="sidetables()" />
-
-<%def name="tables()">
-  <table id="promotion-history" class="traffic-table timeseries" data-interval="hour" data-max-points="${thing.max_points}">
+<%def name="make_traffic_table()">
+<div class="traffic-tables">
+  <h1>detailed traffic for ${thing.detail_name}</h1>
+  <div id="charts"></div>
+  <table id="promotion-history" class="traffic-table timeseries" data-interval="hour" data-max-points="${len(thing.history)}">
   <thead>
   <tr>
-    <th></th>
-    <th colspan="2">${_("impressions")}</th>
-    <th colspan="2">${_("clicks")}</th>
-    <th colspan="2">${_("click-through (%)")}</th>
-  </tr>
-  <tr>
     <th scope="col">${_("date")}</th>
-    <th scope="col" title="${_("unique impressions")}">${_("unique")}</th>
-    <th scope="col" title="${_("total impressions")}" data-color="#ff5700">${_("total")}</th>
-    <th scope="col" title="${_("unique clicks")}">${_("unique")}</th>
-    <th scope="col" title="${_("total clicks")}" data-color="#9494ff">${_("total")}</th>
-    <th scope="col">${_("unique")}</th>
-    <th scope="col">${_("total")}</th>
+    <th scope="col" title="${_("impressions")}" data-color="#ff5700">${_("impressions")}</th>
+    <th scope="col" title="${_("clicks")}" data-color="#9494ff">${_("clicks")}</th>
+    <th scope="col" title="${_("click-through (%)")}">${_("click-through (%)")}</th>
   </tr>
   </thead>
   <tbody>
@@ -84,11 +60,8 @@
       *
       % endif
     </th>
-    <td>--</td>
     <td>${format_number(thing.total_impressions)}</td>
-    <td>--</td>
     <td>${format_number(thing.total_clicks)}</td>
-    <td>--</td>
     % if thing.total_impressions != 0:
     <td>${format_number(thing.total_ctr)}%</td>
     % else:
@@ -103,7 +76,7 @@
   % endif
 
   ${nextprev()}
-
+</div>
 </%def>
 
 <%def name="nextprev()">
@@ -121,3 +94,69 @@
     </p>
   %endif
 </%def>
+
+
+<%def name="make_campaign_table()">
+    <h1>campaigns</h1>
+    %if thing.has_early_campaign:
+    <div class="promo-traffic-help">
+        ${_("Campaigns created before September 12, 2012 don't have traffic data")}
+    </div>
+    %endif
+
+    <table class="traffic-table promocampaign-table">
+      <thead>
+        <th>${_("id")}</th>
+        <th></th>
+        <th></th>
+        <th>${_("start")}</th>
+        <th>${_("end")}</th>
+        <th>${_("target")}</th>
+        <th>${_("bid")}</th>
+        <th>${_("impressions")}</th>
+        <th>${_("cpm")}</th>
+        <th>${_("clicks")}</th>
+        <th>${_("ctr")}</th>
+        <th>${_("cpc")}</th>
+      </thead>
+
+      %for camp in thing.campaign_table:
+          <tr class="${'promo-traffic-live' if camp['live'] else ''} ${'active' if camp['active'] else ''} ${'total' if camp['total'] else ''}">
+              <td>${camp['id']}</td>
+              <td>${plain_link(unsafe(_("detail")), camp['url'])}</td>
+              <td>${plain_link(unsafe(_("csv")), camp['csv'])}</td>
+              <td>${camp['start']}</td>
+              <td>${camp['end']}</td>
+              <td>${camp['target']}</td>
+              <td>${camp['bid']}</td>
+              <td>${camp['impressions']}</td>
+              <td>${camp['cpm']}</td>
+              <td>${camp['clicks']}</td>
+              <td>${camp['ctr']}</td>
+              <td>${camp['cpc']}</td>
+          </tr>
+      %endfor
+    </table>
+</%def>
+
+
+${load_timeseries_js()}
+
+${unsafe(safemarkdown(strings.traffic_promoted_link_explanation))}
+
+%if thing.has_live_campaign:
+    ${last_modified_message()}
+%endif
+
+${unsafe(safemarkdown(strings.traffic_help_email % dict(email=g.selfserve_support_email)))}
+
+${thing.viewer_list}
+
+${make_campaign_table()}
+
+${make_traffic_table()}
+
+<script type="text/javascript">
+  r.timeseries.init()
+</script>
+
