Adjust numbered lists margin to show two digits.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1292,7 +1292,10 @@ a.author { margin-right: 0.5em; }
 .md img { display: none }
 .md ol, .md ul { margin: 10px 2em; }
 .md ul { list-style: disc outside }
-.md ol { list-style: decimal outside }
+.md ol {
+    list-style: decimal outside;
+    margin-left: 3em;
+}
 .md pre { margin: 10px; }
 .md blockquote, .help blockquote {
     border-left: 2px solid #369;
