Don't show empty UserList table.

--- a/r2/r2/templates/userlist.html
+++ b/r2/r2/templates/userlist.html
@@ -55,7 +55,7 @@
 </%def>
 
 <%def name="userlist(title, row_type, rows, headers=None)">
-  <div class="${row_type}-table">
+  <div class="${row_type}-table" style="${'display:none' if not rows else ''}">
     <h1>
       ${title}
     </h1>
