PromoteReport for generating traffic reports on promoted links.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4853,6 +4853,46 @@ table.calendar {
   border: none;
 }
 
+.promote-report-form {
+  margin: 1.5em 2em;
+}
+
+.promote-report-csv {
+  font-size: small;
+}
+
+.promote-report-table {
+  border: 0 none;
+  font-size: small;
+  margin: 1.5em 2em;
+
+  thead th {
+    font-weight: bold;
+    text-align: center;
+    padding: 0 1em;
+    border: 1px solid white;
+    background-color: #CEE3F8;
+  }
+
+  thead th.blank {
+    background: none;
+  }
+
+  thead th[colspan] {
+    text-align: center;
+  }
+
+  td {
+    text-align: right;
+    padding: 0 2em;
+  }
+
+  td.text {
+    text-align: left;
+    padding: 0 2em 0 0;
+  }
+}
+
 /* title box */
 .titlebox {
     font-size: larger;
